force-app/main/default/objects/Group_Source__c/Group_Source__c.object-meta.xml
<CustomObject>
    <label>Group Source</label>
    <nameField>
        <label>Group Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Sources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>