force-app/main/default/objects/Group_Source__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When archived, the Group source cannot be selected</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>