force-app/main/default/objects/Group_Source__c/fields/Revenue_per_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Revenue_per_Visitor__c</fullName>
    <label>Revenue per Visitor</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>