force-app/main/default/objects/Group_Source__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Group</fullName>
            </value>
            <value>
                <fullName>European Cross Border Group</fullName>
            </value>
            <value>
                <fullName>Long Haul</fullName>
            </value>
            <value>
                <fullName>Meetings</fullName>
            </value>
            <value>
                <fullName>Special Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>