force-app/main/default/objects/Group_Source__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Group Sources</relationshipLabel>
    <relationshipName>Group_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>