force-app/main/default/objects/Group_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Revenue_per_Visitor__c</columns>
    <columns>Source__c</columns>
    <columns>Village__c</columns>
    <columns>Archived__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>